finished the logic - delete own recipe, added middleware with ID-params validation, swagger documentation
