# src/routers/recipes.js
@@ -9,6 +9,8 @@ import {
   getRecipesController,
 } from '../controllers/recipe.js';
 import { authenticate } from '../middlewares/authenticate.js';
+import { deleteOwnRecipeController } from '../controllers/deleteOwnRecipe.js';
+import { validateId } from '../middlewares/validateID.js';
 
 const recipesRouter = Router();
 
@@ -22,5 +24,12 @@ recipesRouter.post(
   ctrlWrapper(createNewRecipeController),
 );
 recipesRouter.get('/:id', ctrlWrapper(getRecipeByIdController));
+
+recipesRouter.delete(
+  '/:id',
+  authenticate,
+  validateId,
+  ctrlWrapper(deleteOwnRecipeController),
+);
 
 export default recipesRouter;
